# SiriusOS-legacy2

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  run.sh
meta/: libc.sh  toolchain-elf-i686.sh  toolchain-elf.sh  toolchain.sh
meta/buildenv/: Dockerfile
ports/binutils/: 0001-host-toolchain.patch
ports/gcc/: 0001-host-toolchain.patch
src/: AUTHORS  ChangeLog  Makefile.am  configure.ac  justfile  main.c  reconfigure.sh
src/arch/i686/: boot.s
src/include/: clear.h  color.h  config.h  inf.h  keyboard.h  kprintf.h  memstuff.h  pmm.h  setjmp.h  shell.h  syscall.h  vmm.h
src/include/NotSoLibc/: strlen.h
src/include/compile/: stop.h
src/include/video/tty/: defs.h  tty.h
src/include/video/vga/: colors.h  eyes.h  vga_wh.h
src/lib/: ident_cpu.c  kprintf.c  memstuff.c
src/lib/io/: keyboard.c
src/libc/include/: stdio.h  stdlib.h  string.h
src/libc/include/sys/: cdefs.h
src/libc/stdio/: stdio.c
src/libc/stdlib/: abort.c
src/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcmp.c  strcmp_partial.c  strcpy.c  strlen.c
src/sys/: main.c
src/userland/shell/: main.c
sysroot/boot/: grub.cfg  syslinux.cfg
